--- a/index.htm
+++ b/index.htm
@@ -48,7 +48,7 @@
       </section>
 
       <footer>
-        <p>St. Paul's University, Limuru Kenya - Copyright 2022 &#169;</p>
+        <p>Kyendy Mauwi, St. Paul's University, Limuru Kenya - Copyright 2022 &#169;</p>
         <p class="contact">Contact us: (+254)710-382-088</p>
       </footer>
     </div>
