commit and push

--- a/index.htm
+++ b/index.htm
@@ -48,8 +48,8 @@
       </section>
 
       <footer>
-        <p>Kyendy Mauwi, St. Paul's University, Limuru Kenya - Copyright 2022 &#169;</p>
-        <p class="contact">Contact us: (+254)710-382-088</p>
+        <p>Kyendy & Joe, St. Paul's University, Limuru Kenya - Copyright 2022 &#169;</p>
+        <p class="contact">Contact us: (+254)740-579-404 (+254)710-382-088</p>
       </footer>
     </div>
   </body>
